# SYNTHESIS

./: .gitignore  README.md  benchmark_results.json  benchmark_results_7b.json  pytest.ini
home/user/: SYNTHESIS_Phase_2_Exit_Checklist.md  SYNTHESIS_Phase_3_Exit_Checklist.md
home/user/tests/fixtures/golden_demo_repo/src/: auth.py
home/user/tests/fixtures/golden_demo_repo/tests/: conftest.py  test_auth.py
synthesis/: pyproject.toml
synthesis/docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker  docker-compose.phase3.yml
synthesis/src/synthesis/apps/cli/: main.py
tests/fixtures/golden_demo_repo/src/: auth.py
tests/fixtures/golden_demo_repo/tests/: test_auth.py
tests/integration/: test_benchmark_cli.py  test_cli.py  test_golden_demo.py  test_golden_demo_multi.py  test_jan_adapter.py  test_langfuse_integration.py  test_lm_studio_adapter.py  test_mlx_adapter.py  test_ollama_live.py
tests/security/: test_crg_adversarial.py  test_indexer_hostile.py
tests/unit/: test_approvals.py  test_jan_errors.py  test_ledger.py  test_lm_studio_errors.py  test_loop_engine.py  test_memory_hashing.py  test_model_call_failed.py  test_model_validator.py  test_patch_writer_property.py  test_policy.py  test_router.py  test_sandbox.py  test_spans_errors.py  test_toctou.py  test_toctou_fallback.py  test_trace_completeness.py
uploads/: SYNTHESIS_Canonical_Architecture_Document_v1.0.md
