[project]
name = "synthesis"
version = "0.3.0"
description = "Local-first AI agent orchestration system"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
observability = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]
all = [
    "synthesis[dev,observability]",
]

[project.scripts]
synthesis = "synthesis.apps.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/security"]
norecursedirs = ["fixtures", ".pytest_cache"]
pythonpath = ["src"]
